--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,3 +4,9 @@
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 
 @import "compass/reset";
+#timer{
+  width: 400px;
+  height: 400px;
+  border-radius: 50%;
+  border:2px solid #99CC00;
+}
