--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,9 +4,71 @@
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 
 @import "compass/reset";
-#timer{
+// colors
+$green: #99CC00;
+$black: #333333;
+$white: #fff;
+h1{
   width: 400px;
-  height: 400px;
+  margin: 0 auto;
+}
+#select{
+  display: inline-block;
+  width: 550px;
+  h2{
+    font-size: 20px;
+  }
+  .session, .break{
+    display: inline-block;
+    width: 250px;
+  }
+  input{
+    border: none;
+    background: none;
+    color:white;
+    width: 25px;
+    text-align: center;
+    font-size: 30px;
+  }
+  button{
+    border: none;
+    background: none;
+    color: white;
+    font-size: 20px;
+    cursor: pointer;
+  }
+
+}
+#timer {
+  margin: 0 auto;
+  text-align: center;
+  width: 350px;
+  height: 350px;
+  font-size: 4em;
+  border: 2px solid $green;
   border-radius: 50%;
-  border:2px solid #99CC00;
+  cursor: pointer;
+  position: relative;
+  z-index: 20;
+  overflow: hidden;
+  &:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    border-radius: 50%;
+    z-index: 2;
+    border: 4px solid $black;
+  }
+}
+.hourglass {
+  content: '';
+  position: absolute;
+  background: $green;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  z-index: -1;
 }
