--- a/sass/style.scss
+++ b/sass/style.scss
@@ -44,12 +44,12 @@ h1{
   text-align: center;
   width: 350px;
   height: 350px;
-  font-size: 4em;
+  font-size: 3em;
   border: 2px solid $green;
   border-radius: 50%;
   cursor: pointer;
   position: relative;
-  z-index: 20;
+  z-index: 30;
   overflow: hidden;
   &:before {
     content: '';
@@ -59,8 +59,11 @@ h1{
     left: 0;
     right: 0;
     border-radius: 50%;
-    z-index: 2;
+    z-index: 30;
     border: 4px solid $black;
+  }
+  #current{
+    line-height: 200px;
   }
 }
 .hourglass {
@@ -71,4 +74,7 @@ h1{
   right: 0;
   left: 0;
   z-index: -1;
+}
+.reset{
+  visibility: hidden;
 }
