--- a/sass/style.scss
+++ b/sass/style.scss
@@ -66,7 +66,7 @@ h1{
     line-height: 200px;
   }
 }
-.hourglass {
+#hourglass {
   content: '';
   position: absolute;
   //background: $green;
@@ -75,15 +75,7 @@ h1{
   left: 0;
   z-index: -1;
 }
-.hourglasses {
-  content: '';
-  position: absolute;
-  //background: $green;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  z-index: -1;
-}
-.reset{
+#reset{
   visibility: hidden;
+  cursor: pointer;
 }
